# FormulatorPro-PeriodicExecution

./: Dockerfile  html_to_table.py  main.py  pyproject.toml
.github/workflows/: deploy.yml
gcp/: __init__.py  auth.py  sheets_client.py
json_out/: ccc_ALL.json
