[project]
name = "kouroushou"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "camelot-py[cv] (==1.0.9)",
    "pdfminer-six (>=20240706)",
    "pdfplumber (>=0.11)",
    "pandas (>=2.0)",
    "openpyxl (>=3.1)",
    "requests (>=2.31)",
    "tabulate (>=0.9)",
    "pdf2image (>=1.17)",
    "pytesseract (>=0.3)",
    "opencv-python-headless (>=4.9)",
    "pillow (>=10.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "gspread-dataframe (>=4.0.0,<5.0.0)",
    "google-auth (>=2.40.3,<3.0.0)",
    "img2pdf (>=0.6.1,<0.7.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
